Closed
Bug 248307
Opened 21 years ago
Closed 21 years ago
lack of {} in mozilla\extensions\universalchardet\src\nsEUCJPProber.cpp:80
Categories
(Core :: Internationalization: Localization, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: vladimir, Assigned: vladimir)
Details
Attachments
(1 file)
|
195 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0) Opera 7.51 [en]
Build Identifier: All
In source code mDistributionAnalyser.HandleOneChar(aBuf+i-1, charLen); ecexuted
always despite i==0
if (i == 0)
{
mLastChar[1] = aBuf[0];
mContextAnalyser.HandleOneChar(mLastChar, charLen);
mDistributionAnalyser.HandleOneChar(mLastChar, charLen);
}
else
mContextAnalyser.HandleOneChar(aBuf+i-1, charLen);
mDistributionAnalyser.HandleOneChar(aBuf+i-1, charLen);
must be
if (i == 0)
{
mLastChar[1] = aBuf[0];
mContextAnalyser.HandleOneChar(mLastChar, charLen);
mDistributionAnalyser.HandleOneChar(mLastChar, charLen);
}
else{
mContextAnalyser.HandleOneChar(aBuf+i-1, charLen);
mDistributionAnalyser.HandleOneChar(aBuf+i-1, charLen);
}
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Actual Results:
Wrong work of nsEUCJPProber in universal charset detector
Summary: Wrong lack of {} in mozilla\extensions\universalchardet\src\nsEUCJPProber.cpp:80 → lack of {} in mozilla\extensions\universalchardet\src\nsEUCJPProber.cpp:80
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•21 years ago
|
||
Comment on attachment 151524 [details] [diff] [review]
Just add {}
Simply fix of missing {} by Vladimir.
Attachment #151524 -
Flags: superreview?(roc)
Attachment #151524 -
Flags: review?(smontagu)
Attachment #151524 -
Flags: superreview?(roc)
Attachment #151524 -
Flags: superreview+
Attachment #151524 -
Flags: review?(smontagu)
Attachment #151524 -
Flags: review+
Comment 3•21 years ago
|
||
Timeless: Should I ask you for check in r+sr patch 151524 to tree?
Assignee: localization → vladimir
mozilla/extensions/universalchardet/src/nsEUCJPProber.cpp 1.7
I changed the bracing to match the surrounding code (i hope). if this is fixed
to your satisfaction, please resolve it.
Comment 5•21 years ago
|
||
http://lxr.mozilla.org/seamonkey/source/extensions/universalchardet/src/nsEUCJPProber.cpp#74
Timeless: Thanx! Could you also check r+sr patch for bug 228542?
Marking FIXED.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•