Bug 248307 lack of {} in mozilla\extensions\universalchardet\src\nsEUCJPProber.cpp:80 patch by vladimir@lukianov.name r=roc sr=roc